Makefile has been updated

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,11 @@
 richess: main.o
-	g++ -std=c++11 -Wall -Wextra -pedantic main.o -o richess -lm -lGLEW -lglfw -lGL -lX11 -lpthread -lXrandr -lXi
+	g++ -std=c++14 -Wall -Wextra -pedantic main.o -o richess -lm -lGLEW -lglfw -lGL -lX11 -lpthread -lXrandr -lXi
 
 main.o: main.cpp head.h shader.h model.h camera.h
-	g++ -std=c++11 -Wall -Wextra -pedantic main.cpp -c -lm -lGLEW -lglfw -lGL -lX11 -lpthread -lXrandr -lXi
+	g++ -std=c++14 -Wall -Wextra -pedantic main.cpp -c -lm -lGLEW -lglfw -lGL -lX11 -lpthread -lXrandr -lXi
 
 clean:
-	rm richess *.o
+	@rm -f richess *.o
+
+run:
+	@make -s -j2 && ./richess
