--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 richess: main.o
 	g++ -std=c++14 -Wall -Wextra -pedantic main.o -o richess -lm -lGLEW -lglfw -lGL -lX11 -lpthread -lXrandr -lXi
 
-main.o: main.cpp head.h shader.h model.h camera.h
+main.o: main.cpp stb_image.h head.h shader.h model.h camera.h
 	g++ -std=c++14 -Wall -Wextra -pedantic main.cpp -c -lm -lGLEW -lglfw -lGL -lX11 -lpthread -lXrandr -lXi
 
 clean:
